@@ -105,6 +105,8 @@ CVS code -
 	- Rename variable ret to retval for consistency. (DLR)
 	- Tweak the message displayed when a backup file can't be
 	  written, so as to not duplicate a translated string. (DLR)
+	- If the current filestruct's been partitioned, unpartition it
+	  before saving the associated file. (DLR)
   copy_filestruct()
 	- Rename variable prev to copy to avoid confusion. (DLR)
   print1opt_full()
